--- a/DT/app/src/main/res/values/strings.xml
+++ b/DT/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="search">search</string>
+    <string name="content_description_search">search_des</string>
+    <string name="edit">edit</string>
+    <string name="content_description_edit">edit_des</string>
 </resources>
